--- a/plugin.xml
+++ b/plugin.xml
@@ -38,4 +38,14 @@
         <framework src="AudioToolbox.framework" />
         <framework src="AVFoundation.framework" />
     </platform>
+
+    <!-- <platform name="android">
+        <config-file target="res/xml/config.xml" parent="/*">
+            <feature name="Device" >
+                <param name="android-package" value="org.apache.cordova.device.Device"/>
+            </feature>
+        </config-file>
+
+        <source-file src="src/android/Device.java" target-dir="src/org/apache/cordova/device" />
+    </platform> -->
 </plugin>
